DevTools: simplify CSS agent's setActiveStyleSheets method

First of all: below is a postmortem of the behavior, which happens in the bug.

The exception happens because one of the matched style rules refers
to the stylesheet which has never been reported to the front-end.

Stylesheets are reported by the CSS.setActiveStyleSheets method. Interestingly,
the CSS.setActiveStyleSheets method reports only a subset of stylesheets as "added".
For example, the method doesn't report those style sheets which
have already been "bound". Since getMatchedStylesForNode binds stylesheets while
building a response message, a race condition occurs.

-- END POSTMORTEM --

The whole logic of determining which stylesheets are added and removed was
introduced in https://codereview.chromium.org/14320027. Back in the days,
the bound stylesheets were (incorrectly) used as a source of "reported" stylesheets.
Nowadays, thanks to the m_documentToCSSStyleSheets, we have relevant
information of reported stylesheets.

This patch removes all the tricks around reporting stylesheets to the front-end, since
they are not needed any more.

BUG=681492
R=dgozman

Review-Url: https://codereview.chromium.org/2653643005
Cr-Commit-Position: refs/heads/master@{#446303}