third_party/WebKit/Source/core/inspector/InspectorCSSAgent.h
@@ -75,11 +75,6 @@ class CORE_EXPORT InspectorCSSAgent final
     MediaListSourceImportRule
   };
 
-  enum StyleSheetsUpdateType {
-    InitialFrontendLoad = 0,
-    ExistingFrontendRefresh,
-  };
-
   class InlineStyleOverrideScope {
     STACK_ALLOCATED();
 
@@ -257,10 +252,9 @@ class CORE_EXPORT InspectorCSSAgent final
   void resetNonPersistentData();
   InspectorStyleSheetForInlineStyle* asInspectorStyleSheet(Element* element);
 
-  void updateActiveStyleSheets(Document*, StyleSheetsUpdateType);
+  void updateActiveStyleSheets(Document*);
   void setActiveStyleSheets(Document*,
-                            const HeapVector<Member<CSSStyleSheet>>&,
-                            StyleSheetsUpdateType);
+                            const HeapVector<Member<CSSStyleSheet>>&);
   Response setStyleText(InspectorStyleSheetBase*,
                         const SourceRange&,
                         const String&,
